--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "hbs": "^4.2.0",
     "http-errors": "^2.0.0",
     "mongoose": "^6.9.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
